--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <application
             android:name=".MyApplication"
             android:allowBackup="true"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
+            tools:ignore="GoogleAppIndexingWarning"
+            tools:targetApi="n">
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name">
