--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,8 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
+android.databinding.enableV2=true
+
 # Minimal Android sdk version
 MIN_ANDROID_SDK_VERSION=21
 
