update dependency versions and add adapter to Favorites

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,5 +29,8 @@ MIN_ANDROID_SDK_VERSION=21
 ANDROID_SDK_VERSION=28
 
 # Room
-ROOM_VERSION=2.2.3
+ROOM_VERSION=2.2.4
+
+# Dagger
+DAGGER_VERSION=2.26
 
