--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 
     // Network stuff
-    implementation 'com.squareup.retrofit2:retrofit:2.6.4'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // RX stuff
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -68,7 +68,16 @@ dependencies {
 
     // Room database
     implementation "androidx.room:room-runtime:$ROOM_VERSION"
+    implementation "androidx.room:room-ktx:$ROOM_VERSION"
     kapt "androidx.room:room-compiler:$ROOM_VERSION"
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$LIVEDATA_VERSION"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$LIFECYCLE_VERSION"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$NAV_VERSION"
+    implementation "androidx.navigation:navigation-ui-ktx:$NAV_VERSION"
 
     // Stuff for testing
     testImplementation 'junit:junit:4.13.2'
