--- a/gradle.properties
+++ b/gradle.properties
@@ -30,5 +30,14 @@ ANDROID_SDK_VERSION=30
 ROOM_VERSION=2.3.0
 
 # Dagger
-DAGGER_VERSION=2.32
+DAGGER_VERSION=2.33
+
+# Navigation
+NAV_VERSION=2.3.5
+
+# Lifecycle
+LIFECYCLE_VERSION=2.3.1
+
+# Livedata
+LIVEDATA_VERSION=2.3.1
 
