Stored bus stops in DB on app first launch

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,17 +27,20 @@ MIN_ANDROID_SDK_VERSION=21
 ANDROID_SDK_VERSION=30
 
 # Room
-ROOM_VERSION=2.3.0
+ROOM_VERSION=2.4.1
 
 # Dagger
 DAGGER_VERSION=2.33
 
 # Navigation
-NAV_VERSION=2.3.5
+NAV_VERSION=2.4.0
 
 # Lifecycle
-LIFECYCLE_VERSION=2.3.1
+LIFECYCLE_VERSION=2.4.0
 
 # Livedata
-LIVEDATA_VERSION=2.3.1
+LIVEDATA_VERSION=2.4.0
+
+# WorkManager
+WORK_VERSION=2.7.1
 
