--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/vcs.xml
 /.idea/jarRepositories.xml
+/.idea/gradle.properties
 .DS_Store
 /build
 /captures
