--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -36,11 +36,11 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
 
     // Network stuff
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -79,9 +79,12 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$NAV_VERSION"
     implementation "androidx.navigation:navigation-ui-ktx:$NAV_VERSION"
 
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:$WORK_VERSION"
+
     // Stuff for testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.room:room-testing:$ROOM_VERSION"
-    androidTestImplementation 'androidx.test:runner:1.4.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0-alpha05'
+    androidTestImplementation 'androidx.test:runner:1.4.1-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha03'
 }
