--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.idea/caches
 /.idea/deploymentTargetDropDown.xml
 /.idea/gradle.xml
+/.idea/kotlinc.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
